<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/login"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/logo_binainsani_2" />

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:textColor="@color/white">

        <EditText
            android:id="@+id/inputUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#999999"
            android:textColorHint="#999999" />

        <EditText
            android:id="@+id/inputPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="#999999"
            android:textColorHint="#999999" />

        <TextView
            android:id="@+id/lp_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/lupaPassword"
            android:textAlignment="viewEnd"
            android:textColor="#999999"
            android:textColorHint="#999999" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_margin="20dp"
        android:layout_marginTop="50sp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="#177EB5"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="#999999"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>