<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3FFFFFF"
    tools:context=".homeActivity">

    <ImageView
        android:id="@+id/View_Image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/name"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/logo_binainsani_2" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:text="@string/goodJob"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/logout"
        android:textColor="@android:color/white" />

</RelativeLayout>